<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackgroundDark"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContentHeader"
                style="@style/LoginContentHeaderParentStyle"
                android:background="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    style="@style/LoginLogoStyle"
                    android:background="@color/colorWhite"
                    app:srcCompat="@drawable/logo_archelon" />

                <TextView
                    style="@style/LoginTitleStyle"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome" />

                <TextView
                    style="@style/LoginSubTitleStyle"
                    android:text="@string/app_full_title" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/inputParent"
                style="@style/BaseCardViewStyle"
                app:cardElevation="@dimen/elevation_extra_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llContentHeader">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/padding_large">

                    <TextView
                        style="@style/LoginLabelStyle"
                        android:text="@string/username" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false">

                        <com.google.android.material.textfield.TextInputEditText style="@style/LoginEditTextStyle" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        style="@style/LoginLabelStyle"
                        android:layout_marginTop="@dimen/margin_large"
                        android:text="@string/password" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="?attr/colorBgPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            style="@style/LoginEditTextStyle"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/llButtonParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_extra_large"
                app:layout_constraintTop_toBottomOf="@+id/inputParent"
                android:orientation="vertical" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/LoginButtonStyle"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llButtonParent" />

            <ProgressBar
                android:id="@+id/loginSpinner"
                style="@style/LoginSpinnerStyle"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llButtonParent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>